chore(pages): add bookflight, flight and flightstatus pages. update images

--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
                         features.
                     </p>
                     <a
-                        href="https://databrowser.opendatahub.com/"
+                        href="https://databrowser.impact.digital.noi.bz.it/"
                         class="feature-link"
                     >
                         Explore Data Browser →
                     </a>
                     <div class="screenshot-placeholder">
-                        <a href="https://databrowser.opendatahub.com/">
+                        <a href="https://databrowser.impact.digital.noi.bz.it/">
                             <img
                                 src="./images/databrowser.png"
                                 alt="Data Browser"
@@ -93,13 +93,13 @@
                         applications.
                     </p>
                     <a
-                        href="https://webcomponents.opendatahub.com/"
+                        href="https://webcomponents.impact.digital.noi.bz.it/"
                         class="feature-link"
                     >
                         Explore Web Component →
                     </a>
                     <div class="screenshot-placeholder">
-                        <a href="https://webcomponents.opendatahub.com/">
+                        <a href="https://webcomponents.impact.digital.noi.bz.it/">
                             <img
                                 src="./images/webcomponent.png"
                                 alt="Web Component"
@@ -148,9 +148,99 @@
                         Explore Data Quality →
                     </a>
                     <div class="screenshot-placeholder">
-                        <a href="https://dataquality.impact.digital.noi.bz.it">
+                        <a href="https://dataquality.impact.digital.noi.bz.it/">
                             <img
                                 src="./images/dataquality.png"
+                                alt="Web Component"
+                            />
+                        </a>
+                    </div>
+                </div>
+
+                <div class="feature-card data-quality">
+                    <h2>STUART - Super Talkative Chatbot</h2>
+                    <p class="feature-description">
+                        A chatbot powered by LLM models that uses data from the
+                        Public Data Platform documentation and GitHub issues to
+                        assist customer care in resolving tickets.
+                    </p>
+                    <a
+                        href="https://stuart.opendatahub.com/"
+                        class="feature-link"
+                    >
+                        Explore STUART →
+                    </a>
+                    <div class="screenshot-placeholder">
+                        <a href="https://stuart.opendatahub.com/">
+                            <img src="./images/stuart.png" alt="STUART" />
+                        </a>
+                    </div>
+                </div>
+
+                <div class="feature-card data-quality">
+                    <h2>ePaper Backend</h2>
+                    <p class="feature-description">
+                        A web application that takes the data about events from
+                        the Open Data Hub and displays them on an ePaper signage
+                        totems
+                    </p>
+                    <a
+                        href="https://epaper.opendatahub.com/displays/"
+                        class="feature-link"
+                    >
+                        Explore ePaper Backend →
+                    </a>
+                    <div class="screenshot-placeholder">
+                        <a href="https://epaper.opendatahub.com/displays/">
+                            <img
+                                src="./images/epaper.png"
+                                alt="Web Component"
+                            />
+                        </a>
+                    </div>
+                </div>
+
+                <div class="feature-card data-quality">
+                    <h2>Flight Data Web Component</h2>
+                    <p class="feature-description">
+                        Provides real-time updates on flight status or allows
+                        users to book flights directly.
+                    </p>
+                    <a href="./flightstatus.html" class="feature-link">
+                        Explore Flight Status Web Component →
+                    </a>
+                    <a href="./bookflight.html" class="feature-link">
+                        Explore Flight Booking Web Component →
+                    </a>
+                    <div class="screenshot-placeholder">
+                        <a href="./flight.html">
+                            <img
+                                src="./images/flight.png"
+                                alt="Web Component"
+                            />
+                        </a>
+                    </div>
+                </div>
+
+                <div class="feature-card data-quality">
+                    <h2>Data Catalog API</h2>
+                    <p class="feature-description">
+                        The Data Catalog APIs exposes the information about the
+                        available datasets of the Public Data Platform using the
+                        two standard ODPS and DCAT
+                    </p>
+                    <a
+                        href="https://data-catalog.opendatahub.testingmachine.eu/"
+                        class="feature-link"
+                    >
+                        Explore Data Catalog API →
+                    </a>
+                    <div class="screenshot-placeholder">
+                        <a
+                            href="https://data-catalog.opendatahub.testingmachine.eu/"
+                        >
+                            <img
+                                src="./images/catalog.png"
                                 alt="Web Component"
                             />
                         </a>
