chore: get rid of opendatahub logo and replace it with 'IMPACT: WP2'

--- a/index.html
+++ b/index.html
@@ -19,13 +19,7 @@ SPDX-License-Identifier: AGPL-3.0-or-later
         <header class="header">
             <div class="header-wrapper">
                 <div class="navbar">
-                    <a href="https://noi.bz.it/en" class="logo">
-                        <img
-                            src="https://opendatahub.com/img/NOI_1_BK.svg"
-                            alt="NOI"
-                            class="logo-noi"
-                        />
-                    </a>
+                    <h2>IMPACT: WP2</h2>
                 </div>
 
                 <nav class="sub-nav">
@@ -44,9 +38,9 @@ SPDX-License-Identifier: AGPL-3.0-or-later
                         </li>
                         <li><div class="separator"></div></li>
                         <li>
-                            <a href="https://opendatahub.com/">
+                            <a href="https://noi.bz.it/en">
                                 <img
-                                    src="https://opendatahub.com/img/NOI_OPENDATAHUB_NEW_BK_nospace-01.svg"
+                                    src="https://opendatahub.com/img/NOI_1_BK.svg"
                                     alt="Open Data Hub"
                                     class="logo-noi"
                                 />
