fix: correct alt texts for logos and images (#5)

--- a/src/bookflight.html
+++ b/src/bookflight.html
@@ -22,7 +22,7 @@ SPDX-License-Identifier: AGPL-3.0-or-later
                     <a href="https://noi.bz.it/en" class="logo">
                         <img
                             src="https://opendatahub.com/img/NOI_1_BK.svg"
-                            alt="NOI"
+                            alt="NOI Techpark logo"
                             class="logo-noi"
                         />
                     </a>
@@ -37,7 +37,7 @@ SPDX-License-Identifier: AGPL-3.0-or-later
                             >
                                 <img
                                     src="https://databrowser.impact.digital.noi.bz.it/EFRmod.png"
-                                    alt="Autonomous Province of Bolzano"
+                                    alt="European Regional Development Fund (ERDF) logo"
                                     class="logo-eu"
                                 />
                             </a>
@@ -47,7 +47,7 @@ SPDX-License-Identifier: AGPL-3.0-or-later
                             <a href="https://opendatahub.com/">
                                 <img
                                     src="https://opendatahub.com/img/NOI_OPENDATAHUB_NEW_BK_nospace-01.svg"
-                                    alt="Open Data Hub"
+                                    alt="Open Data Hub logo"
                                     class="logo-noi"
                                 />
                             </a>
@@ -80,7 +80,7 @@ SPDX-License-Identifier: AGPL-3.0-or-later
                         <a href="https://opendatahub.com">
                             <img
                                 src="https://opendatahub.com/img/NOI_OPENDATAHUB_NEW_BK_nospace-01.svg"
-                                alt="Open Data Hub"
+                                alt="Open Data Hub logo"
                             />
                         </a>
                         <a href="https://opendatahub.com/">
@@ -94,7 +94,7 @@ SPDX-License-Identifier: AGPL-3.0-or-later
                         <a href="https://noi.bz.it/en">
                             <img
                                 src="https://opendatahub.com/img/NOI_1_BK.svg"
-                                alt="NOI"
+                                alt="NOI Techpark logo"
                             />
                         </a>
                         <a href="https://noi.bz.it/en">
