--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@ SPDX-License-Identifier: AGPL-3.0-or-later
                             >
                                 <img
                                     src="https://databrowser.impact.digital.noi.bz.it/EFRmod.png"
-                                    alt="Autonomous Province of Bolzano"
+                                    alt="European Regional Development Fund (ERDF) logo"
                                     class="logo-eu"
                                 />
                             </a>
@@ -41,7 +41,7 @@ SPDX-License-Identifier: AGPL-3.0-or-later
                             <a href="https://noi.bz.it/en">
                                 <img
                                     src="https://opendatahub.com/img/NOI_1_BK.svg"
-                                    alt="Open Data Hub"
+                                    alt="NOI Techpark logo"
                                     class="logo-noi"
                                 />
                             </a>
@@ -79,7 +79,7 @@ SPDX-License-Identifier: AGPL-3.0-or-later
                         <a href="https://databrowser.impact.digital.noi.bz.it/">
                             <img
                                 src="./images/databrowser.png"
-                                alt="Data Browser"
+                                alt="Data Browser interface image"
                             />
                         </a>
                     </div>
@@ -102,7 +102,7 @@ SPDX-License-Identifier: AGPL-3.0-or-later
                         <a href="https://webcomponents.impact.digital.noi.bz.it/">
                             <img
                                 src="./images/webcomponent.png"
-                                alt="Web Component"
+                                alt="Web Component library image"
                             />
                         </a>
                     </div>
@@ -128,7 +128,7 @@ SPDX-License-Identifier: AGPL-3.0-or-later
                         >
                             <img
                                 src="./images/analytics.png"
-                                alt="Web Component"
+                                alt="Analytics dashboard image"
                             />
                         </a>
                     </div>
@@ -151,7 +151,7 @@ SPDX-License-Identifier: AGPL-3.0-or-later
                         <a href="https://dataquality.impact.digital.noi.bz.it/">
                             <img
                                 src="./images/dataquality.png"
-                                alt="Web Component"
+                                alt="Data Quality monitoring image"
                             />
                         </a>
                     </div>
@@ -172,7 +172,7 @@ SPDX-License-Identifier: AGPL-3.0-or-later
                     </a>
                     <div class="screenshot-placeholder">
                         <a href="https://stuart.opendatahub.com/">
-                            <img src="./images/stuart.png" alt="STUART" />
+                            <img src="./images/stuart.png" alt="STUART chatbot interface image" />
                         </a>
                     </div>
                 </div>
@@ -194,7 +194,7 @@ SPDX-License-Identifier: AGPL-3.0-or-later
                         <a href="https://epaper.opendatahub.com/displays/">
                             <img
                                 src="./images/epaper.png"
-                                alt="Web Component"
+                                alt="ePaper Backend signage image"
                             />
                         </a>
                     </div>
@@ -216,7 +216,7 @@ SPDX-License-Identifier: AGPL-3.0-or-later
                         <a href="./flight.html">
                             <img
                                 src="./images/flight.png"
-                                alt="Web Component"
+                                alt="Flight Data Web Component image"
                             />
                         </a>
                     </div>
@@ -241,7 +241,7 @@ SPDX-License-Identifier: AGPL-3.0-or-later
                         >
                             <img
                                 src="./images/catalog.png"
-                                alt="Web Component"
+                                alt="Data Catalog API image"
                             />
                         </a>
                     </div>
@@ -256,7 +256,7 @@ SPDX-License-Identifier: AGPL-3.0-or-later
                         <a href="https://opendatahub.com">
                             <img
                                 src="https://opendatahub.com/img/NOI_OPENDATAHUB_NEW_BK_nospace-01.svg"
-                                alt="Open Data Hub"
+                                alt="Open Data Hub logo"
                             />
                         </a>
                         <a href="https://opendatahub.com/">
@@ -270,7 +270,7 @@ SPDX-License-Identifier: AGPL-3.0-or-later
                         <a href="https://noi.bz.it/en">
                             <img
                                 src="https://opendatahub.com/img/NOI_1_BK.svg"
-                                alt="NOI"
+                                alt="NOI Techpark logo"
                             />
                         </a>
                         <a href="https://noi.bz.it/en">
