add Journey OTP api

--- a/src/index.html
+++ b/src/index.html
@@ -246,6 +246,29 @@ SPDX-License-Identifier: AGPL-3.0-or-later
                         </a>
                     </div>
                 </div>
+                
+                <div class="feature-card data-quality">
+                    <h2>Journey OTP API</h2>
+                    <p class="feature-description">
+                        Journey OTP API provides multimodal journey planning and routing information based on OpenTripPlanner standards.
+                    </p>
+                    <a
+                        href="https://journey.impact.digital.noi.bz.it/#/"
+                        class="feature-link"
+                    >
+                        Explore Journey OTP API →
+                    </a>
+                    <div class="screenshot-placeholder">
+                        <a
+                            href="https://journey.impact.digital.noi.bz.it/#/"
+                        >
+                            <img
+                                src="./images/journey.png"
+                                alt="Journey OTP API image"
+                            />
+                        </a>
+                    </div>
+                </div>
             </div>
         </main>
 
